# aoin

./: .gitignore  pyproject.toml
src/northpole_packing/: const.py  experiments.py  genetic_algorithm.py  genetic_algorithm_angle_based.py  initialization.py  simulated_annealing.py  solver.py  tree.py  visualization.py
